--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <title>Invie - tus mejores guitarras Version 2</title>
     <link rel="stylesheet" href="css/invie.css"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+ <link href="css/animate.min.css" rel="stylesheet">
+ <link href="css/font-awesome.min.css" rel="stylesheet">
+ <link href="css/lightbox.css" rel="stylesheet">
+ <link href="css/main.css" rel="stylesheet">
+ <link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
+ <link href="css/responsive.css" rel="stylesheet">
   </head>
-  <body>
+  <body  BACKGROUND="images/azul.jpeg">
     <header class="header contenedor">
       <figure class="logotipo">
         <img src="images/invie.png" width="186" height="60" alt="Aquí debería ir nuestro logotipo">
@@ -55,7 +62,119 @@
             <li>Inicia tu camino como Rockstar</li>
           </ol>
         </div>
-      </article>
-    </section>
+
+
+</article>
+
+      <section id="contact">
+        <div id="google-map" class="wow fadeIn" data-latitude="52.365629" data-longitude="4.871331" data-wow-duration="1000ms" data-wow-delay="400ms"></div>
+        <div id="contact-us" class="parallax">
+          <div class="container">
+            <div class="row">
+
+            </div>
+            <div class="contact-form wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
+              <div class="row">
+                <div class="col-sm-6">
+                  <form id="main-contact-form" name="contact-form" method="post" action="#">
+                    <div class="row  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+                      <div class="col-sm-6">
+                        <div class="form-group">
+                          <input type="text" name="name" class="form-control" placeholder="Name" required="required">
+                        </div>
+                      </div>
+                      <div class="col-sm-6">
+                        <div class="form-group">
+                          <input type="email" name="email" class="form-control" placeholder="Email Address" required="required">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <input type="text" name="subject" class="form-control" placeholder="Subject" required="required">
+                    </div>
+                    <div class="form-group">
+                      <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message" required="required"></textarea>
+                    </div>
+                    <div class="form-group">
+                      <button type="submit" class="btn-submit">Enviar Ahora</button>
+                    </div>
+                  </form>
+                </div>
+                <div class="col-sm-6">
+                  <div class="contact-info wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+                    <p>La Farmacia ELI es una organizacion que se ocupa del cuidado de tu Salud.</p>
+                    <ul class="address">
+                      <li><i class="fa fa-map-marker"></i> <span> Address:</span>Avenida Algarrobos MZ A lt 39 </li>
+                      <li><i class="fa fa-phone"></i> <span> Phone:</span> +991783466  </li>
+                      <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:someone@yoursite.com"> farmaciaeli@hotmail.com</a></li>
+                      <li><i class="fa fa-globe"></i> <span> Website:</span> <a href="#">www.farmaciaeliale.com</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section><!--/#contact-->
+
+      <footer id="footer">
+        <div class="footer-top wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <div class="container text-center">
+            <div class="footer-logo">
+              <a href="index.html"><img class="img-responsive" src="images/logito.png" alt=""></a>
+            </div>
+            <div class="social-icons">
+              <ul>
+                <li><a class="envelope" href="#"><i class="fa fa-envelope"></i></a></li>
+                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a class="tumblr" href="#"><i class="fa fa-tumblr-square"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6">
+                <p>&copy; 2018 Farmacia ELI.</p>
+              </div>
+              <div class="col-sm-6">
+                <p class="pull-right">Crafted by <a href="http://designscrazed.org/">Falcon</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+      <script type="text/javascript" src="js/jquery.js"></script>
+      <script type="text/javascript" src="js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+      <script type="text/javascript" src="js/jquery.inview.min.js"></script>
+      <script type="text/javascript" src="js/wow.min.js"></script>
+      <script type="text/javascript" src="js/mousescroll.js"></script>
+      <script type="text/javascript" src="js/smoothscroll.js"></script>
+      <script type="text/javascript" src="js/jquery.countTo.js"></script>
+      <script type="text/javascript" src="js/lightbox.min.js"></script>
+      <script type="text/javascript" src="js/main.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+  </section>
+
+
+
+
   </body>
 </html>
